# libm2handler

./: .gitignore  COPYING  Makefile.am  PROTOCOL.markdown  README.markdown  TODO  autogen.sh  configure.ac  m2handler.pc.in  wscript
example/deployment/: config.sh  deployment.conf
example/deployment/assets/: index.html  ws.html  ws_variable.html
example/handlers/: body_toupper.c  daemon_to_upper.c  fifo_reader.c  null_handler.c  ws_handshake.c  ws_handshake.cpp  ws_variable.c
src/: Makefile  daemon.c  daemon.h  debug.c  debug.h  handler.c  handler.h  m2daemon.c  m2daemon.h  m2handler.c  m2handler.h  m2handler.pc  websocket.c  websocket.h  websocket_framing.c  websocket_framing.h  websocket_session.c  websocket_session.h
src/adt/: dict.c
src/bstr/: bstraux.c
src/sample_handlers/: fifo_reader.c
src/websocket/: framing.c  framing.h  session.c  session.h
test/: calc_accept.rb  dict.c  framing.c  jansson.c  ws_accept.c
